# symspell_simple

./: .gitignore  CMakeLists.txt  README.md
include/: edit_distance.h  integer_compression.h  string_mutator.h
src/: dictionary_generator.cpp  edit_distance.cpp  edit_distance_test.cpp  integer_compression.cpp
src/generator/: dictionary_generator.cpp
test/: edit_distance_test.cpp  string_mutator_test.cpp
